--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@ h1 {
     <h1>Javascript DOM, APIs y Canvas</h1>
     <br>
     <div class="contenedor">
-        <a href="./FundamentosJSS/dom/colorsrgb.html" class="btn btn-2">RGB Random 
+        <a href="./FJS/colorsrgb.html" class="btn btn-2">RGB Random 
             <span></span>
             <span></span>
         </a>
-        <a href="./FundamentosJSS/dom/colorsrgba.html" class="btn btn-2">RGBA con inputs 
+        <a href="./FJS/colorsrgba.html" class="btn btn-2">RGBA con inputs 
             <span></span>
             <span></span>
         </a>
-        <a href="./FundamentosJSS/dom/galeria.html" class="btn btn-2"> Galería
+        <a href="./FJS/galeria.html" class="btn btn-2"> Galería
             <span></span>
             <span></span>
         </a>
-        <a href="./FundamentosJSS/dom/tareas.html" class="btn btn-2"> Lista de Tareas
+        <a href="./FJS/tareas.html" class="btn btn-2"> Lista de Tareas
             <span></span>
             <span></span>
         </a>
